se añade el footer y complementa formulario

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- INICIO NAVBAR -->
-    <nav class="navbar navbar-expand-lg bg-transparent fixed-top w-100">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top w-100">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="./assets/img/viajes.svg" alt="logo" width="30" height="24" class="d-inline-block align-text-top">
@@ -134,20 +134,31 @@
     <div class="w-90 m-auto p-5">
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Ingresa tú nombre">
       </div>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Asunto</label>
-        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Ingresa asunto">
       </div>
       <div class="mb-3">
         <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
       </div>
+      <button type="submit" class="btn btn-info mb-3">Enviar</button>
     </div>
     </section>
     <!-- FIN FORMULARIO -->
-
+    <footer class="bg-info">
+      <div class="w-75 m-auto d-flex  justify-content-between align-items-center p-3">
+      <p class="m-0">Viajes Chile</p>
+      <div>
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook"></i>
+      </div>
+    </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
